@@ -18,6 +18,8 @@ library building - src/other/ext dependencies now use the native
 build system provided by the project, rather than having BRL-CAD
 rewrite it to match ours.
 
+* restored MGED ViewRing menu, sweep rectangle features - Cliff Yapp
+* restored MGED collaboration and rateknob features - Cliff Yapp
 * fixed a crash when shaded BRep drawing fails - Cliff Yapp
 * added man pages for process and ps commands - Cliff Yapp
 * added man page for 3dm-g Rhino3D importer - Cliff Yapp
